--- a/help.html
+++ b/help.html
@@ -1479,7 +1479,7 @@
                                                     >
                                                       <div
                                                         data-key="no_ready_or_pending_payout_instrument"
-                                                        class="_lqbvk7"
+                                                        class="feature__airbnb-card"
                                                       >
                                                         <div>
                                                           <div class="full__height">
@@ -1670,7 +1670,7 @@
                                                     >
                                                       <div
                                                         data-key="host_reservation_info"
-                                                        class="_lqbvk7"
+                                                        class="feature__airbnb-card"
                                                       >
                                                         <div>
                                                           <div class="full__height">
