--- a/insights.html
+++ b/insights.html
@@ -1498,7 +1498,7 @@
                                 <div class="_14ddvtv">
                                   <a
                                     href="/experience-hosting/performance?modal=expertise"
-                                    class="_1sikdxcl"
+                                    class="explore__show-more-click"
                                     ><span class="text_highlight dir dir-ltr"
                                       >Expertise</span
                                     >
@@ -1529,7 +1529,7 @@
                                 <div class="_14ddvtv">
                                   <a
                                     href="/experience-hosting/performance?modal=access"
-                                    class="_1sikdxcl"
+                                    class="explore__show-more-click"
                                     ><span class="text_highlight dir dir-ltr"
                                       >Insider access</span
                                     >
@@ -1560,7 +1560,7 @@
                                 <div class="_14ddvtv">
                                   <a
                                     href="/experience-hosting/performance?modal=connection"
-                                    class="_1sikdxcl"
+                                    class="explore__show-more-click"
                                     ><span class="text_highlight dir dir-ltr"
                                       >Connection</span
                                     >
