--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -302,7 +302,7 @@
                                             </div>
                                           </div>
                                           <div class="_gor68n">
-                                            <div class="_6htn2u">
+                                            <div class="position__relative">
                                               <div id="FMP-target">
                                                 <section>
                                                   <div class="_wrz7pg">
@@ -520,7 +520,7 @@
                                                   <a
                                                     target="_blank"
                                                     href="/help/topic/1632"
-                                                    class="_1sikdxcl"
+                                                    class="explore__show-more-click"
                                                     >Terms apply</a
                                                   >
                                                 </div>
@@ -567,7 +567,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_6htn2u">
+                                          <div class="position__relative">
                                             <section>
                                               <div class="_wrz7pg">
                                                 <h2
@@ -681,18 +681,18 @@
                                                 protected under our
                                                 <a
                                                   href="/terms"
-                                                  class="_1sikdxcl"
+                                                  class="explore__show-more-click"
                                                   >Terms of Service</a
                                                 >,
                                                 <a
                                                   href="/terms/payments_terms"
-                                                  class="_1sikdxcl"
+                                                  class="explore__show-more-click"
                                                   >Payments Terms of Service</a
                                                 >, cancellation, and other
                                                 safeguards.
                                                 <a
                                                   href="/help/topic/1121/payment-methods?q=payments"
-                                                  class="_1sikdxcl"
+                                                  class="explore__show-more-click"
                                                   >Learn more</a
                                                 >
                                               </div>
@@ -1050,7 +1050,7 @@
                                             </div>
                                           </div>
                                           <div class="_gor68n">
-                                            <div class="_6htn2u">
+                                            <div class="position__relative">
                                               <div id="FMP-target">
                                                 <section>
                                                   <div class="_wrz7pg">
@@ -1268,7 +1268,7 @@
                                                   <a
                                                     target="_blank"
                                                     href="/help/topic/1632"
-                                                    class="_1sikdxcl"
+                                                    class="explore__show-more-click"
                                                     >Terms apply</a
                                                   >
                                                 </div>
@@ -1315,7 +1315,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_6htn2u">
+                                          <div class="position__relative">
                                             <section>
                                               <div class="_wrz7pg">
                                                 <h2
@@ -1429,18 +1429,18 @@
                                                 protected under our
                                                 <a
                                                   href="/terms"
-                                                  class="_1sikdxcl"
+                                                  class="explore__show-more-click"
                                                   >Terms of Service</a
                                                 >,
                                                 <a
                                                   href="/terms/payments_terms"
-                                                  class="_1sikdxcl"
+                                                  class="explore__show-more-click"
                                                   >Payments Terms of Service</a
                                                 >, cancellation, and other
                                                 safeguards.
                                                 <a
                                                   href="/help/topic/1121/payment-methods?q=payments"
-                                                  class="_1sikdxcl"
+                                                  class="explore__show-more-click"
                                                   >Learn more</a
                                                 >
                                               </div>
