--- a/payments/tax-info.html
+++ b/payments/tax-info.html
@@ -307,12 +307,12 @@
                                                 Number.
                                                 <a
                                                   href="/help/article/436/what-is-vat-and-how-does-it-apply-to-me"
-                                                  class="_1sikdxcl"
+                                                  class="explore__show-more-click"
                                                   >Learn more about VAT.</a
                                                 >
                                               </div>
                                               <div style="margin-top: 32px">
-                                                <div class="_6htn2u">
+                                                <div class="position__relative">
                                                   <div
                                                     style="
                                                       margin-top: 24px;
@@ -376,7 +376,7 @@
                                                 <a
                                                   target="_blank"
                                                   href="/help/article/438/where-do-i-find-my-vat-invoice"
-                                                  class="_1sikdxcl"
+                                                  class="explore__show-more-click"
                                                   >Learn more.</a
                                                 >
                                               </div>
@@ -738,12 +738,12 @@
                                                 Number.
                                                 <a
                                                   href="/help/article/436/what-is-vat-and-how-does-it-apply-to-me"
-                                                  class="_1sikdxcl"
+                                                  class="explore__show-more-click"
                                                   >Learn more about VAT.</a
                                                 >
                                               </div>
                                               <div style="margin-top: 32px">
-                                                <div class="_6htn2u">
+                                                <div class="position__relative">
                                                   <div
                                                     style="
                                                       margin-top: 24px;
@@ -807,7 +807,7 @@
                                                 <a
                                                   target="_blank"
                                                   href="/help/article/438/where-do-i-find-my-vat-invoice"
-                                                  class="_1sikdxcl"
+                                                  class="explore__show-more-click"
                                                   >Learn more.</a
                                                 >
                                               </div>
