--- a/products.html
+++ b/products.html
@@ -2130,8 +2130,8 @@
                                                   </section>
                                                 </div>
                                               </div>
-                                              <div class="_6htn2u">
-                                                <div class="_88dcy8g">
+                                              <div class="position__relative">
+                                                <div class="explore__list-wrapper">
                                                   <div
                                                     style="
                                                       margin-top: 0px;
@@ -2140,7 +2140,7 @@
                                                   >
                                                     <div class="_7ts20mk">
                                                       <div class="_c991cpe">
-                                                        <div class="_1ilrlnv">
+                                                        <div class="explore__list-full-wh">
                                                           <div class="_9342og">
                                                             <div
                                                               class="_p03egf"
@@ -2180,7 +2180,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_c991cpe">
-                                                        <div class="_1ilrlnv">
+                                                        <div class="explore__list-full-wh">
                                                           <div class="_9342og">
                                                             <div
                                                               class="_p03egf"
@@ -2220,7 +2220,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_c991cpe">
-                                                        <div class="_1ilrlnv">
+                                                        <div class="explore__list-full-wh">
                                                           <div class="_9342og">
                                                             <div
                                                               class="_p03egf"
@@ -2260,7 +2260,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_c991cpe">
-                                                        <div class="_1ilrlnv">
+                                                        <div class="explore__list-full-wh">
                                                           <div class="_9342og">
                                                             <div
                                                               class="_p03egf"
@@ -2319,7 +2319,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_c991cpe">
-                                                        <div class="_1ilrlnv">
+                                                        <div class="explore__list-full-wh">
                                                           <div class="_9342og">
                                                             <div
                                                               class="_p03egf"
@@ -2377,7 +2377,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_c991cpe">
-                                                        <div class="_1ilrlnv">
+                                                        <div class="explore__list-full-wh">
                                                           <div class="_9342og">
                                                             <div
                                                               class="_p03egf"
@@ -2417,7 +2417,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_c991cpe">
-                                                        <div class="_1ilrlnv">
+                                                        <div class="explore__list-full-wh">
                                                           <div class="_9342og">
                                                             <div
                                                               class="_p03egf"
@@ -2457,7 +2457,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_c991cpe">
-                                                        <div class="_1ilrlnv">
+                                                        <div class="explore__list-full-wh">
                                                           <div class="_9342og">
                                                             <div
                                                               class="_p03egf"
@@ -2497,7 +2497,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_c991cpe">
-                                                        <div class="_1ilrlnv">
+                                                        <div class="explore__list-full-wh">
                                                           <div class="_9342og">
                                                             <div
                                                               class="_p03egf"
@@ -9862,8 +9862,8 @@
                                                     </section>
                                                   </div>
                                                 </div>
-                                                <div class="_6htn2u">
-                                                  <div class="_88dcy8g">
+                                                <div class="position__relative">
+                                                  <div class="explore__list-wrapper">
                                                     <div
                                                       style="
                                                         margin-top: 0px;
@@ -9879,7 +9879,7 @@
                                                         "
                                                       >
                                                         <div class="_c991cpe">
-                                                          <div class="_1ilrlnv">
+                                                          <div class="explore__list-full-wh">
                                                             <div
                                                               class="_9342og"
                                                             >
@@ -9921,7 +9921,7 @@
                                                           </div>
                                                         </div>
                                                         <div class="_c991cpe">
-                                                          <div class="_1ilrlnv">
+                                                          <div class="explore__list-full-wh">
                                                             <div
                                                               class="_9342og"
                                                             >
@@ -9963,7 +9963,7 @@
                                                           </div>
                                                         </div>
                                                         <div class="_c991cpe">
-                                                          <div class="_1ilrlnv">
+                                                          <div class="explore__list-full-wh">
                                                             <div
                                                               class="_9342og"
                                                             >
