--- a/profile.html
+++ b/profile.html
@@ -663,7 +663,7 @@
                                             ><span class="_nx67f0"
                                               ><a
                                                 href="/users/edit-photo"
-                                                class="_1sikdxcl"
+                                                class="explore__show-more-click"
                                                 >Update photo</a
                                               ></span
                                             >
@@ -1215,7 +1215,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                 data-testid="carousel-wrapper"
                                               >
                                                 <ul
-                                                  class="_3uceys"
+                                                  class="feature__airbnb-ul"
                                                   style="
                                                     margin-left: -6px;
                                                     margin-right: -6px;
@@ -1250,7 +1250,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                       >
                                                         <a
                                                           aria-label="Cooking Deep Fried Bright Orange Battered Eggs"
-                                                          class="l4a2xp4 dir dir-ltr"
+                                                          class="explore__list-d-block dir dir-ltr"
                                                           data-check-info-section="true"
                                                           href="/experiences/3745068"
                                                           rel="noopener noreferrer nofollow"
@@ -1580,7 +1580,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                   <div class="_pdgm0p">
                                     <a
                                       href="/users/edit-photo"
-                                      class="_1sikdxcl"
+                                      class="explore__show-more-click"
                                       >Update photo</a
                                     >
                                   </div>
@@ -1815,7 +1815,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                       ><span class="_nx67f0"
                                         ><a
                                           href="/users/edit-photo"
-                                          class="_1sikdxcl"
+                                          class="explore__show-more-click"
                                           >Update photo</a
                                         ></span
                                       >
@@ -2338,7 +2338,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                           data-testid="carousel-wrapper"
                                         >
                                           <ul
-                                            class="_3uceys"
+                                            class="feature__airbnb-ul"
                                             style="
                                               margin-left: -10px;
                                               margin-right: -10px;
@@ -2373,7 +2373,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                 >
                                                   <a
                                                     aria-label="Cooking Deep Fried Bright Orange Battered Eggs"
-                                                    class="l4a2xp4 dir dir-ltr"
+                                                    class="explore__list-d-block dir dir-ltr"
                                                     data-check-info-section="true"
                                                     href="/experiences/3745068"
                                                     rel="noopener noreferrer nofollow"
