--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -57,7 +57,7 @@
                 </div>
                 <ol class="l7n4lsf dir dir-ltr">
                   <li class="len26si dir dir-ltr">
-                    <a href="/resolutions" class="_1sikdxcl"
+                    <a href="/resolutions" class="explore__show-more-click"
                       >Send money - Airbnb</a
                     >
                   </li>
@@ -89,7 +89,7 @@
                   </li>
                 </ol>
                 <span class="_2s36nz"
-                  ><a href="/resolutions" class="_1sikdxcl">Exit</a></span
+                  ><a href="/resolutions" class="explore__show-more-click">Exit</a></span
                 >
               </div>
               <div class="_ngr7rq" role="progressbar" aria-valuenow="30">
