--- a/resources.html
+++ b/resources.html
@@ -461,7 +461,7 @@
                                 <div class="_1rjvhdp">
                                   <div class="_1udzt2s">
                                     <ul
-                                      class="_3uceys"
+                                      class="feature__airbnb-ul"
                                       style="
                                         margin-left: 0px;
                                         margin-right: 0px;
