--- a/reviews.html
+++ b/reviews.html
@@ -305,7 +305,7 @@
                                     ><a
                                       aria-describedby="no_show_link-row-subtitle"
                                       href="/dynamic_flows/experience_review_no_show/689578804116867301"
-                                      class="_1sikdxcl"
+                                      class="explore__show-more-click"
                                       >I didn’t go on the experience</a
                                     ></span
                                   >
@@ -325,7 +325,7 @@
                                     ><a
                                       aria-describedby="report_link-row-subtitle"
                                       href="/dynamic_flows/report_unsafe_behavior/3?reservation_code=TA4MSHAM&amp;entry_source=review"
-                                      class="_1sikdxcl"
+                                      class="explore__show-more-click"
                                       >Report a safety issue</a
                                     ></span
                                   >
