--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1754,7 +1754,7 @@
                                   <a
                                     target="_blank"
                                     href="/resources/hosting-experiences/a/photo-requirements-for-experiences-386"
-                                    class="_1sikdxcl"
+                                    class="explore__show-more-click"
                                     ><span
                                       class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
                                       ><span class="dir dir-ltr"
