--- a/gift.html
+++ b/gift.html
@@ -260,7 +260,7 @@
                                       rel="noopener noreferrer"
                                       target="_blank"
                                       href="https://www.airbnb.com/help/topic/1632"
-                                      class="_1sikdxcl"
+                                      class="explore__show-more-click"
                                       >gift card terms</a
                                     >.
                                   </div>
@@ -416,7 +416,7 @@
                               For more questions visit our
                               <a
                                 href="/help/article/981/how-do-airbnb-gift-cards-work"
-                                class="_1sikdxcl"
+                                class="explore__show-more-click"
                                 >help center</a
                               >
                             </div>
