--- a/payments/payout-methods.html
+++ b/payments/payout-methods.html
@@ -368,7 +368,7 @@
                                                               <a
                                                                 target="_blank"
                                                                 href="/help/article/3004"
-                                                                class="_1sikdxcl"
+                                                                class="explore__show-more-click"
                                                                 >Learn more</a
                                                               >
                                                             </div>
@@ -938,7 +938,7 @@
                                                             <a
                                                               target="_blank"
                                                               href="/help/article/3004"
-                                                              class="_1sikdxcl"
+                                                              class="explore__show-more-click"
                                                               >Learn more</a
                                                             >
                                                           </div>
